added options for dereplication and elucidation